save/webpages/mir-layout/scss/project_styles/_navigation.scss
/*  navigation
 *  - all styles about menus
 */

// Extra large devices (large desktops)
// set the defaults for all responsive levels here
// no (xl) media query necessary (desktop first)

.mir-main-nav {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  background-color: $darkGray;
  z-index: 1000;
  .nav-item {
    .active {
      background-color: $darkContrastGray;
    }
  }
}
.navbar {
  padding: 0;
}
.nav-link {
  padding: 1rem 1rem 1rem 1rem;
  color: $menuFontGray !important;
  &:hover,
  &:active,
  &:focus {
    color: white !important;
  }
}
.nav-item.active {
  background-color: $darkContrastGray;
}




.internal_links.navbar-nav {
  margin-top: 1rem;
  justify-content: center;
  flex-direction: row;
}
footer {
  .nav-link {
    a {
      color: $footerGray;
      padding: 0.5rem 1rem;
      font-size: 0.9rem;
      &:hover {
        color: $linkHoverBlue;
        text-decoration: none;
      }
    }
  }
}
#powered_by {
  padding: 1em 0px;
}

// Large devices (desktops) and below: <= 1200px
@include media-breakpoint-down(lg) {
  // add/overwrite styles for responsive level lg and lower
}

// Medium devices (tablets) and below: <= 992px
@include media-breakpoint-down(md) {
  // add/overwrite styles for responsive level md and lower
}

// Small devices (landscape phones) and below: <= 768px
@include media-breakpoint-down(sm) {
  // add/overwrite styles for responsive level sm and lower
}

// Extra small devices (portrait phones): <= 576px
@include media-breakpoint-down(xs) {
  // add/overwrite styles for responsive level xs
}

